# Blender

./: README.md
cad_whisperer/: README.md  gitignore  main.py  pyproject.toml
cad_whisperer/cad_whisperer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
cad_whisperer/example_data/: industrial_electrical_box.glb
cad_whisperer/example_data/output/: scene.node_link.json  scene.triples
cad_whisperer/output_first_run/output/: scene.graphml  scene.node_link.json  scene.triples  scene_plotly.html  scene_pyg_data.pt
cad_whisperer/output_first_run/output_3/: scene.node_link.json  scene.triples
cad_whisperer/output_first_run/output_dir/: scene_tagged.graphml
cad_whisperer/output_first_run/output_kone/: scene.graphml  scene.node_link.json  scene.triples  scene_plotly.html  scene_pyg_data.pt  scene_tagged.graphml
cad_whisperer/scripts/: cad_to_graph.py  graph_interpreter.py  graph_viewer.py  shape_finder.py
cad_whisperer/src/cadwhisperer/graph/: enrich.py
cad_whisperer/src/cadwhisperer/io/: scene_loader.py
cad_whisperer/src/cadwhisperer/shapes/: base.py  heuristics.py  models.py
cad_whisperer/src/cadwhisperer/utils/: geometry.py
utils/: depth_renderings.py
