[tool.poetry]
name = "cad-whisperer"
version = "0.1.0"
description = "Toolkit to explain, categorise, segment, and enrich CAD models with a knowledge‑graph output"
authors = ["Alessandro Leone <a.leone@nyris.io>"]
license = "MIT"
readme = "README.md"
packages = [
  { include = "cadwhisperer", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
dash = "^3.1.1"
dash-cytoscape = "^1.0.2"
jinja2 = "^3.1.6"
lxml = "^6.0.0"
matplotlib = "^3.10.3"
networkx = "^3.4.2"
plotly = "^6.2.0"
pyvis = "^0.3.2"
scipy = "^1.15.3"
torch = "^2.7.1"
torch-geometric = "^2.6.1"
trimesh = "^4.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
ruff = "^0.4.2"
black = "^24.3.0"
mypy = "^1.10.0"
mkdocs-material = "^9.5.17"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
